fixed every endpoint's issues